--- a/Logistics/packages.config
+++ b/Logistics/packages.config
@@ -1,17 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights.JavaScript" version="0.22.9-build00167" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
-  <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
-  <package id="ThoughtWorks.QRCode" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.1" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.JavaScript" version="0.22.9-build00167" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.4.1" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.4.1" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.4.1" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.4.0" targetFramework="net46" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net46" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net46" />
+  <package id="Microsoft.Net.Compilers" version="2.3.0" targetFramework="net46" developmentDependency="true" />
+  <package id="MySql.Data" version="6.9.9" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.3.1" targetFramework="net46" />
+  <package id="ThoughtWorks.QRCode" version="1.1.0" targetFramework="net46" />
 </packages>
