--- a/Logistics/Logistics.csproj
+++ b/Logistics/Logistics.csproj
@@ -192,40 +192,6 @@
     <Content Include="Style\css\styles.css" />
     <Content Include="Style\css\success.css" />
     <Content Include="Style\font\iconfont.svg" />
-    <Content Include="web\all.js" />
-    <Content Include="web\business\choose_bus.html" />
-    <Content Include="web\business\fanghuo.html" />
-    <Content Include="web\business\history_log.html" />
-    <Content Include="web\business\index.html" />
-    <Content Include="web\business\jieche.html" />
-    <Content Include="web\business\jieche_qingdan.html" />
-    <Content Include="web\business\jieche_success.html" />
-    <Content Include="web\business\js\main.js" />
-    <Content Include="web\business\shouhuo.html" />
-    <Content Include="web\business\shouhuo_set.html" />
-    <Content Include="web\business\xuanhuo.html" />
-    <Content Include="web\business\zhuangche.html" />
-    <Content Include="web\business\zhuangche_success.html" />
-    <Content Include="web\count\index.html" />
-    <Content Include="web\css\iconfont.css" />
-    <Content Include="web\css\iconlink.css" />
-    <Content Include="web\css\sjstyle.css" />
-    <Content Include="web\css\style.css" />
-    <Content Include="web\css\sui\sm-extend.css" />
-    <Content Include="web\css\sui\sm-extend.min.css" />
-    <Content Include="web\css\sui\sm.css" />
-    <Content Include="web\css\sui\sm.min.css" />
-    <Content Include="web\css\zbstyle.css" />
-    <Content Include="web\font\iconfont.svg" />
-    <Content Include="web\js\sm-city-picker.js" />
-    <Content Include="web\js\sm-city-picker.min.js" />
-    <Content Include="web\js\sm-extend.js" />
-    <Content Include="web\js\sm-extend.min.js" />
-    <Content Include="web\js\sm.js" />
-    <Content Include="web\js\sm.min.js" />
-    <Content Include="web\js\zepto.min.js" />
-    <Content Include="web\manage\index.html" />
-    <Content Include="web\user\index.html" />
     <None Include="Properties\PublishProfiles\WuLiu.pubxml" />
     <Content Include="Style\font\iconfont.eot" />
     <Content Include="Style\font\iconfont.ttf" />
@@ -272,11 +238,6 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
-    <Content Include="web\.DS_Store" />
-    <Content Include="web\font\iconfont.eot" />
-    <Content Include="web\font\iconfont.ttf" />
-    <Content Include="web\font\iconfont.woff" />
-    <Content Include="web\user\.DS_Store" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
@@ -760,8 +721,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Style\icon\" />
-    <Folder Include="Style\img\" />
-    <Folder Include="web\icon\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj">
@@ -799,7 +758,7 @@
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
-          <AutoAssignPort>True</AutoAssignPort>
+          <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>13839</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://192.168.0.200</IISUrl>
