--- a/Logistics/Logistics.csproj
+++ b/Logistics/Logistics.csproj
@@ -119,6 +119,7 @@
     <Content Include="Command\GetLogisticsLineListFromUid.aspx" />
     <Content Include="Command\GetSHPhoneAdressList.aspx" />
     <Content Include="Command\RegisterUserBinding.aspx" />
+    <Content Include="doc\doc.aspx" />
     <Content Include="GetQR.aspx" />
     <Content Include="LC\Business\DschargeGood\IndexDhg.aspx" />
     <Content Include="LC\Business\DschargeGood\LC_Handle.aspx" />
@@ -199,30 +200,16 @@
     <Content Include="Style\font\iconfont.eot" />
     <Content Include="Style\font\iconfont.ttf" />
     <Content Include="Style\font\iconfont.woff" />
-    <Content Include="Style\img\code.jpg" />
-    <Content Include="Style\img\home_icon.png" />
-    <Content Include="Style\img\icon2b.png" />
-    <Content Include="Style\img\lock_icon_copy.png" />
-    <Content Include="Style\img\login_bg.png" />
-    <Content Include="Style\img\login_pwd.png" />
-    <Content Include="Style\img\login_qq.png" />
-    <Content Include="Style\img\login_user.png" />
-    <Content Include="Style\img\login_wb.png" />
-    <Content Include="Style\img\msg.png" />
-    <Content Include="Style\img\new_金馆长.jpg" />
-    <Content Include="Style\img\plugmenu1.png" />
-    <Content Include="Style\img\plugmenu2.png" />
-    <Content Include="Style\img\plugmenu3.png" />
-    <Content Include="Style\img\plugmenu4.png" />
-    <Content Include="Style\img\plugmenu5.png" />
-    <Content Include="Style\img\plugmenu6.png" />
-    <Content Include="Style\img\plugmenu8.png" />
-    <Content Include="Style\img\pwd.png" />
-    <Content Include="Style\img\reg_bg.png" />
-    <Content Include="Style\img\send.png" />
-    <Content Include="Style\img\success.png" />
-    <Content Include="Style\img\success_bg.png" />
-    <Content Include="Style\img\Thumbs.db" />
+    <Content Include="Style\img\1.png" />
+    <Content Include="Style\img\184良食记山楂酒.jpg" />
+    <Content Include="Style\img\4.png" />
+    <Content Include="Style\img\erweima.png" />
+    <Content Include="Style\img\fanxian.png" />
+    <Content Include="Style\img\img_search.png" />
+    <Content Include="Style\img\jizan-img.png" />
+    <Content Include="Style\img\touxiang1.jpeg" />
+    <Content Include="Style\img\touxiang2.jpeg" />
+    <Content Include="Style\img\user-img.jpg" />
     <Content Include="Style\scripts\config.js" />
     <Content Include="Style\scripts\main.js" />
     <Content Include="Style\scripts\tools\newbase.js" />
@@ -284,11 +271,22 @@
     <Compile Include="api.ashx.cs">
       <DependentUpon>api.ashx</DependentUpon>
     </Compile>
+    <Compile Include="ApiCommand\CMD_BindUser.cs" />
     <Compile Include="ApiCommand\CMD_GetAddressNextList.cs" />
     <Compile Include="ApiCommand\CMD_GetMyLoginData.cs" />
+    <Compile Include="ApiCommand\CMD_GetSysApiDoc.cs" />
     <Compile Include="ApiCommand\CMD_GetToRegUser.cs" />
     <Compile Include="ApiCommand\CMD_JSSignature.cs" />
+    <Compile Include="ApiCommand\CMD_LineBinding.cs" />
     <Compile Include="ApiCommand\CMD_OAuth.cs" />
+    <Compile Include="ApiCommand\CMD_OutSystem.cs" />
+    <Compile Include="doc\doc.aspx.cs">
+      <DependentUpon>doc.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="doc\doc.aspx.designer.cs">
+      <DependentUpon>doc.aspx</DependentUpon>
+    </Compile>
     <Compile Include="WebCommandBase.cs" />
     <Compile Include="WebCommandVOBase.cs" />
     <Compile Include="Command\AddLogisticsFromPhone.aspx.cs">
