--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Model\LC_User.cs" />
     <Compile Include="Model\LC_UserBindLogisticsList.cs" />
     <Compile Include="Model\LC_Vehicle.cs" />
+    <Compile Include="Model\LC_VehicleBinding.cs" />
     <Compile Include="Model\ModelBase.cs" />
     <Compile Include="Model\w_address_basic_data.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
