--- a/Logistics/Web.config
+++ b/Logistics/Web.config
@@ -20,14 +20,14 @@
     </httpModules>
   </system.web>
   <appSettings>
-    <add key="HOST" value="http://wl.mikiboss.com/" />
+    <add key="HOST" value="testwl.mikiboss.com" />
     <add key="AppID" value="wx183b057b6606ed81"/>
     <add key="AppSecret" value="f0c1690b361ac153c1092f7b6bc10456"/>
     <add key="OriginalID" value="gh_f236216e1fd9"/>
   </appSettings>
   <connectionStrings>
-    <add connectionString="Data Source=192.168.0.200;Database=Logistics;User ID=sa;Pwd=sa199888" name="db" />
-    <!--<add connectionString="Data Source=.;Database=Logistics;User ID=wxl;Pwd=wowotang88899" name="db" />-->
+    <!--<add connectionString="Data Source=192.168.0.200;Database=Logistics;User ID=sa;Pwd=sa199888" name="db" />-->
+    <add connectionString="Data Source=192.168.0.239;Database=Logistics;User ID=wxl;Pwd=wowotang88899" name="db" />
   </connectionStrings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
