--- a/Logistics/Logistics.csproj
+++ b/Logistics/Logistics.csproj
@@ -329,6 +329,7 @@
     <Compile Include="ApiCommand\CMD_LineBinding.cs" />
     <Compile Include="ApiCommand\CMD_OAuth.cs" />
     <Compile Include="ApiCommand\CMD_OutSystem.cs" />
+    <Compile Include="ApiCommand\GLCommand\CMD_LineAuthorization.cs" />
     <Compile Include="ApiCommand\GLCommand\CMD_LineAuthorizationList.cs" />
     <Compile Include="doc\doc.aspx.cs">
       <DependentUpon>doc.aspx</DependentUpon>
