--- a/Logistics/Web.config
+++ b/Logistics/Web.config
@@ -26,8 +26,8 @@
     <add key="OriginalID" value="gh_f236216e1fd9"/>
   </appSettings>
   <connectionStrings>
-    <!--<add connectionString="Data Source=192.168.0.200;Database=Logistics;User ID=sa;Pwd=sa199888" name="db" />-->
-    <add connectionString="Data Source=192.168.0.239;Database=Logistics;User ID=wxl;Pwd=wowotang88899" name="db" />
+    <add connectionString="Data Source=192.168.0.200;Database=Logistics;User ID=sa;Pwd=sa199888" name="db" />
+    <!--<add connectionString="Data Source=192.168.0.239;Database=Logistics;User ID=wxl;Pwd=wowotang88899" name="db" />-->
   </connectionStrings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
