--- a/Logistics/Logistics.csproj
+++ b/Logistics/Logistics.csproj
@@ -147,6 +147,7 @@
     <Content Include="LC\Business\MeetCar\LC_GoodDetails.aspx" />
     <Content Include="LC\Business\MeetCar\LC_IndexMC.aspx" />
     <Content Include="LC\Business\MeetCar\LC_Success.aspx" />
+    <Content Include="LC\OperationOverview\LC_Index.aspx" />
     <Content Include="LC\Business\PaymentDay\LC_PaymentDay.aspx" />
     <Content Include="LC\Business\PretendCar\LC_Commodity.aspx" />
     <Content Include="LC\Business\PretendCar\LC_IndexPC.aspx" />
@@ -508,6 +509,13 @@
     </Compile>
     <Compile Include="LC\Business\GoodPayment\Paid\LC_Success.aspx.designer.cs">
       <DependentUpon>LC_Success.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="LC\OperationOverview\LC_Index.aspx.cs">
+      <DependentUpon>LC_Index.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LC\OperationOverview\LC_Index.aspx.designer.cs">
+      <DependentUpon>LC_Index.aspx</DependentUpon>
     </Compile>
     <Compile Include="LC\Business\PaymentDay\LC_PaymentDay.aspx.cs">
       <DependentUpon>LC_PaymentDay.aspx</DependentUpon>
